# s3d

./: .gitignore  CMakeLists.txt  README  s3d_initiate.sh
doc/: todo
src/: compiler.c  compiler.cpp  compiler.h  compilermain.c  compilermain.cpp  display.c  exception.c  exception.h  export.c  export.cpp  global.h  import.c  import.cpp  io.c  io.cpp  io.h  iomain.c  manager.c  manager.cpp  manager.h  mesh.c  mesh.h  misc.h  msgqueue.c  msgqueue.cpp  msgqueue.h  s3d.c  s3d.cpp  sha1.c  test.c
test/: compile.sh  cube-extrude.s3ds  cube.s3ds  simple.s3ds
